tests/e2e/semantics/string_template_mutation_invalid_name.story
b = 0
a = "foo{b my_mutation}"
